[tool.poetry]
name = "cryptopals"
version = "0.1.0"
description = ""
authors = ["pylbrecht <pylbrecht@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
